--- a/assets/scss/layouts/page.scss
+++ b/assets/scss/layouts/page.scss
@@ -157,6 +157,7 @@
     font-size: 15px;
     line-height: 1.4em;
     color: #333;
+    font-weight: normal;
 
     @include breakpoint(laptop) {
         display: none;
@@ -228,6 +229,7 @@
 
   p{
     font-size: 18px;
+    font-weight: normal;
   }
 }
 
